--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 20px;
+    font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
@@ -16,27 +16,35 @@ ul {
     list-style: none;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container {
     display: flex;
     flex-direction: column;
-    border: 2px solid #000;
+    border: 1px solid #000;
     border-radius: 0.6rem;
-    width: 350px;
+    background-color: #aaa;
+    width: 155px;
     padding: 0.7rem;
-    background-color: grey;
+    margin-top: 50px;
 }
 
 .grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
+    gap: 5px;
 }
 
 .screen {
     padding: 10px;
-    height: 100px;
+    height: 75px;
     background-color: whitesmoke;
-    border: 2px solid #000;
+    border: 1px solid #000;
     border-radius: 0.3rem;
 }
 
@@ -46,7 +54,7 @@ ul {
 }
 
 .screen h1{
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .util-btns ul {
@@ -56,18 +64,21 @@ ul {
 }
 
 .util-btns ul li {
-    border: 2px solid #000;
-    font-size: 25px;
+    border: 1px solid #000;
+    width: 100%;
+    border-radius: 0.25rem;
 }
 
-.util-btns ul li .del-btn {
-    background-color: blue
+.util-btns ul li:first-child {
+    background-color: #88d;;
+    margin-right: 10px;
 }
 
-.util-btns ul li .clear-btn{
-    background-color: red;
+.util-btns ul li:last-child{
+    background-color: #d88;
 }
 
-.numpad .grid ul li {
-    border: 2px solid #000;
+.numpad .grid li {
+    border: 1px solid #000;
+    border-radius: 0.3rem;
 }
