--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    border: 1px solid #000;
+    border: 2px solid #000;
     border-radius: 0.6rem;
     background-color: #aaa;
-    width: 155px;
+    width: 350px;
+    height: 400px;
     padding: 0.7rem;
     margin-top: 50px;
 }
@@ -38,23 +39,29 @@ body {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 5px;
+    height: 100%;
 }
 
 .screen {
     padding: 10px;
     height: 75px;
     background-color: whitesmoke;
-    border: 1px solid #000;
+    border: 2px solid #000;
     border-radius: 0.3rem;
 }
 
-.screen h1,
-.screen h3{
+.screen  div h1,
+.screen div h3{
     text-align: right;
 }
 
-.screen h1{
+.screen div h1{
     font-size: 25px;
+    min-height: 65%;
+}
+
+.screen div:first-child {
+    min-height: 35%;
 }
 
 .util-btns {
@@ -64,21 +71,30 @@ body {
 }
 
 .util-btns button {
-    border: 1px solid #000;
+    border: 2px solid #000;
     width: 100%;
+    height: 30px;
     border-radius: 0.25rem;
 }
 
 .util-btns button:first-child {
     background-color: #88d;;
-    margin-right: 10px;
+    margin-right: 5px;
+}
+
+.util-btns button:first-child:hover {
+    background-color: rgb(113, 113, 182);;
 }
 
 .util-btns button:last-child{
     background-color: #d88;
 }
 
+.util-btns button:last-child:hover{
+    background-color: rgb(177, 109, 109);
+}
+
 .numpad.grid button {
-    border: 1px solid #000;
+    border: 2px solid #000;
     border-radius: 0.3rem;
 }
