--- a/style.css
+++ b/style.css
@@ -26,11 +26,11 @@ body {
     display: flex;
     flex-direction: column;
     border: 2px solid #000;
-    border-radius: 0.6rem;
+    border-radius: 0.5rem;
     background-color: #aaa;
     width: 350px;
     height: 400px;
-    padding: 0.7rem;
+    padding: 1.5rem;
     margin-top: 50px;
 }
 
@@ -47,7 +47,7 @@ body {
     height: 75px;
     background-color: whitesmoke;
     border: 2px solid #000;
-    border-radius: 0.3rem;
+    border-radius: 0.4rem;
 }
 
 .screen  div h1,
@@ -66,7 +66,7 @@ body {
 
 .util-btns {
     display: flex;
-    margin: 10px 0 5px 0;
+    margin: 5px 0;
     justify-content: space-evenly;
 }
 
